--- a/index.html
+++ b/index.html
@@ -121,14 +121,13 @@
       </ul>
 
       <p class="copyright">
-        &copy; Copyright by
+        © Concept and design by
         <a
           class="twitter-link"
           target="_blank"
           href="https://twitter.com/jonasschmedtman"
           >Jonas Schmedtmann</a
-        >. Use for learning or your portfolio. Don't use to teach. Don't claim
-        as your own.
+        >. Developed by James Hart.
       </p>
     </div>
 
